--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ section .title::after {
 /* home section styling */
 .home {
     display: flex;
-    background: url("banner.png") no-repeat center;
+    background: url("https://img.freepik.com/premium-vector/beautiful-light-speed-line-background-black-background-abstract-design-vector-illustration_29865-7230.jpg?w=1060") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
