--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ section .title::after {
 /* home section styling */
 .home {
     display: flex;
-    background: url("https://www.pixel4k.com/wp-content/uploads/2018/10/abstract-dark-orange-4k_1539371381.jpg.webp") no-repeat center;
+    background:url('./banner.png') no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
